updated disabled and commented test cases and other classes as well